--- a/ContinuesVoiceRecognition-master/ContinuesVoiceRecognition-master/app/src/main/AndroidManifest.xml
+++ b/ContinuesVoiceRecognition-master/ContinuesVoiceRecognition-master/app/src/main/AndroidManifest.xml
@@ -3,16 +3,17 @@
     package="com.continuesvoicerecognition">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGEs" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo_smart_huffaz"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".StartupActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
@@ -22,7 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SecondActivity"></activity>
+        <activity android:name=".SecondActivity" android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity android:name=".MainActivity" android:windowSoftInputMode="stateAlwaysHidden"/>
+
     </application>
 
 </manifest>
