--- a/ContinuesVoiceRecognition-master/ContinuesVoiceRecognition-master/gradle/wrapper/gradle-wrapper.properties
+++ b/ContinuesVoiceRecognition-master/ContinuesVoiceRecognition-master/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Nov 16 20:50:58 IST 2015
+#Tue May 17 21:49:10 SGT 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.4-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
